<resources>
    <string name="app_name">Notification Service</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome to Zebra Notification Controller</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Enable Notification Permission</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Welcome to Zebra Notification Controller</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings related to the Alert Dialog -->
    <string name="notification_listener_service">"Notification Listener Service"</string>
    <string name="notification_listener_service_explanation">"For the the app. to work you need to enable the Notification Listener Service. Enable it now?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="notification_controller_desc">"Notification Controller Enable Disable"</string>
    <string name="notification_controller_title">"Notification Controller Enable Disable"</string>

    <string name="notification_controller_rule_type_description">"Rule type WhiteList BlackList"</string>
    <string name="notification_controller_rule_type_title">"Rule type WhiteList BlackList"</string>
    <string name="notification_controller_rule_type_default_value">"0"</string>

    <string name="notification_controller_whitelistrules_description">"Define your Whitelist Rules"</string>
    <string name="notification_controller_whitelistrules_title">"Define your Whitelist Rules"</string>
    <string name="notification_controller_whitelistrule_description">"add whitelist rule"</string>
    <string name="notification_controller_whitelistrule_title">"add whitelist rule"</string>
    <string name="notification_controller_notification_package_name_description">"Package name"</string>
    <string name="notification_controller_notification_package_name__title">"Package name"</string>
    <string name="notification_controller_notification_channelid_description">"Channel Id"</string>
    <string name="notification_controller_notification_channelid_title">"Channel Id"</string>
    <string name="notification_controller_notification_title_description">"Title"</string>
    <string name="notification_controller_notification_title_title">"Title"</string>
    <string name="notification_controller_notification_text_description">"Text"</string>
    <string name="notification_controller_notification_text_title">"Text"</string>
    <string name="notification_controller_notification_subtext_description">"Sub Text"</string>
    <string name="notification_controller_notification_subtext_title">"Sub Text"</string>

    <string name="notification_controller_blacklistrules_description">"Define your Blacklist Rules"</string>
    <string name="notification_controller_blacklistrules_title">"Define your Blacklist Rules"</string>
    <string name="notification_controller_blacklistrule_description">"add Blacklist rule"</string>
    <string name="notification_controller_blacklistrule_title">"add Blacklist rule"</string>



</resources>